plugins {
    id 'java-library'
    id 'net.neoforged.moddev.legacyforge' version "2.0.107"
    id "me.modmuss50.mod-publish-plugin" version "0.8.4"
    id 'antlr'
}

//archivesBaseName = "${mod_archive_name}-${minecraft_version}"
version = project.mod_version
java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

mixin {
    add(sourceSets.main, "${mod_id}.refmap.json")

    config("${mod_id}.mixins.json")
}

base {
    archivesName = "${mod_archive_name}-${minecraft_version}"
}

sourceSets.main.java {
    srcDir 'build/generated-src/antlr'
}

sourceSets.main.resources{
    srcDir 'src/generated/resources'
    exclude '.cache/**'
}

generateGrammarSource {
    //arguments += ["-visitor", "-package", "com.robertx22.mine_and_slash.antlr"]
    arguments += ["-visitor", "-package", "com.robertx22.mine_and_slash.antlr"]
}

legacyForge {
    version = "${minecraft_version}-${forge_version}"

    //validateAccessTransformers = true

    def at = file('src/main/resources/META-INF/accesstransformer.cfg')
    if (at.exists()) {
        accessTransformers = ["src/main/resources/META-INF/accesstransformer.cfg"]
    }
    parchment {
        minecraftVersion = parchment_minecraft
        mappingsVersion = parchment_version
    }
    runs {
        client {
            client()
            setDevLogin(false)
        }
        client2 {
            client()
            programArguments.addAll('--username', 'Dev2')
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        server {
            server()
        }


    }

    runs.configureEach {
        def capitalizedName = name.capitalize()

        project.tasks.named("run${capitalizedName}", JavaExec) {
            def toolchain = project.extensions.getByType(JavaToolchainService)
            javaLauncher.set(
                    toolchain.launcherFor {
                        it.languageVersion.set(JavaLanguageVersion.of(17))
                        //this will force your jvm as JBR
                        //why? cuz JBR allow you to do more operation when hot swap, even add method!
                        it.vendor.set(JvmVendorSpec.JETBRAINS)
                    }
            )
        }

        // Enable Enhanced Class Redefinition (JBR)
        jvmArguments.add("-XX:+AllowEnhancedClassRedefinition")
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

repositories {

    maven { url = "https://maven.theillusivec4.top/" } // curios
    maven { url = "https://maven.kosmx.dev/" } // player animations
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev/"
        content {
            includeGroup "mezz.jei"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'Sponge'
                url = 'https://repo.spongepowered.org/repository/maven-public'
            }
        }
        filter { includeGroupAndSubgroups('org.spongepowered') }
    }
    exclusiveContent {
        forRepositories(
                maven {
                    name = 'ParchmentMC'
                    url = 'https://maven.parchmentmc.org/'
                },
                maven {
                    name = "NeoForge"
                    url = 'https://maven.neoforged.net/releases'
                }
        )
        filter { includeGroup('org.parchmentmc.data') }
    }

    maven {
        url = "https://api.modrinth.com/maven"
    }

    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    annotationProcessor("org.spongepowered:mixin:0.8.5-SNAPSHOT:processor")


    modCompileOnly ("top.theillusivec4.curios:curios-forge:${curios_version}:api")
    modRuntimeOnly ("top.theillusivec4.curios:curios-forge:${curios_version}")

    modCompileOnly("mezz.jei:jei-1.20.1-common-api:${project.jei_version}") //API for compile
    modCompileOnly("mezz.jei:jei-1.20.1-forge-api:${project.jei_version}") //API for compile
    modRuntimeOnly("mezz.jei:jei-1.20.1-forge:${project.jei_version}") //Full for runtime

    modImplementation("dev.kosmx.player-anim:player-animation-lib-forge:${player_animator_version}")

    //this is directly from the include build!
    //can't find this when you build your project? please read this: https://www.freecodecamp.org/news/how-to-use-git-submodules/#:~:text=How%20to%20Clone%20a%20Repository%20with%20a%20Git%20Submodule
    //I've already add mahj's repo as submodule, you just need to init it!
    //and also, you'll need to add your own fork as remote(except mahj), because you can just push the commit to mahj's repo!
    //you need to push to your fork first, and then open a PR!
    //everytime you change the version of lib, you need to change the version of this too!
    modImplementation("com.robertx22:Library-of-Exile-Rework:${project.exile_library_version}")
    modImplementation("com.robertx22:ancient-obelisks:${project.ancient_obelisks_version}")
    modImplementation("com.robertx22:the_harvest:${project.the_harvest_version}")
    modImplementation("com.robertx22:dungeon_realm:${project.dungeon_realm_version}")
    //modImplementation("maven.modrinth:library-of-exile:${project.exile_library_version}")

    antlr "org.antlr:antlr4:4.5" // use ANTLR version 4
}


jar {

    finalizedBy('reobfJar')
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])


    manifest {
        attributes([
                'Specification-Title'   : mod_archive_name,
                'Specification-Vendor'  : mod_author,
                'Specification-Version' : project.jar.archiveVersion,
                'Implementation-Title'  : project.name,
                'Implementation-Version': project.jar.archiveVersion,
                'Implementation-Vendor' : mod_author,
                'Built-On-Minecraft'    : minecraft_version
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    int pack_format = getPackFormat()
    var expandProps = [
            "mod_version"             : mod_version,
            "mod_id"                  : mod_id,
            "mod_issues_link"         : mod_issues_link,
            "mod_website_link"        : mod_website_link,
            "mod_display_name"        : mod_display_name,
            "mod_author"              : mod_author,
            "forge_version"           : forge_version,
            "exile_library_version"   : exile_library_version,
            "dungeon_realm_version"   : dungeon_realm_version,
            "ancient_obelisks_version": ancient_obelisks_version,
            "the_harvest_version"     : the_harvest_version,
            'group'                   : project.group, //Else we target the task's group.
            'minecraft_version'       : minecraft_version,
            'mod_name'                : mod_archive_name,
            'description'             : project.description,
            "pack_format"             : pack_format
    ]

    var jsonExpandProps = expandProps.collectEntries {
        key, value -> [(key): value instanceof String ? value.replace("\n", "\\\\n") : value]
    }

    filesMatching(['META-INF/mods.toml']) {
        expand expandProps
    }

    filesMatching(['pack.mcmeta', '*.mixins.json']) {
        expand jsonExpandProps
    }

    inputs.properties(expandProps)
}

int getPackFormat() {
    switch (minecraft_version) {
        case "1.18.2": return 8
        case "1.19.2": return 9
        case "1.19.3": return 12
        case "1.19.4": return 13
        case "1.20.1": return 15
        case "1.20.2": return 18
        case "1.20.3": return 22
        case "1.20.4": return 22
        default: return 6
    }
}


publishMods {

    file = jar.archiveFile
    changelog = file("CHANGELOG.txt").text
    type = "${release_type}".startsWith("release") ? STABLE : ("${release_type}".startsWith("beta") ? BETA : ALPHA)
    modLoaders.add("forge")
    displayName = "${mod_archive_name}-${minecraft_version}-v${mod_version}"

    curseforge {
        //this will not block the build process even you don't have the file
        accessToken = file("key.properties").exists() ? file("key.properties").text : ""
        projectId = "${curse_id}"
        minecraftVersions.add("${minecraft_version}")
        minecraftVersions.add("1.20")
    }

    modrinth {
        accessToken = file("modrinth_key.properties").exists() ? file("modrinth_key.properties").text : ""
        projectId = "${modrinth_id}"
        minecraftVersions.add("${minecraft_version}")
        minecraftVersions.add("1.20")
    }

    curseforge {
        requires { slug = "library-of-exile" }
        requires { slug = "curios" }
        requires { slug = "playeranimator" }
        requires { slug = "dungeon-realm" }
        requires { slug = "the-harvest" }
        requires { slug = "ancient-obelisks" }
    }
    modrinth {
        requires { slug = "library-of-exile" }
        requires { slug = "curios" }
        requires { slug = "playeranimator" }
        requires { slug = "dungeon-realm" }
        requires { slug = "the-harvest" }
        requires { slug = "ancient-obelisks" }
    }
}
/*
wiki {
    docs {
        mutils {
            root = file("docs")
        }
    }
}
*/

